<resources>
    <string name="app_name">Team#26 Weather App</string>
    <string name="hintText">Enter City Name</string>
    <string name="heading">Team#26</string>
    <string name="insertButtontext">Add City</string>
    <string name="loadButtonText">Load Cities</string>
    <string name="deleteButtonText">Delete</string>
    <string name="logoutButton">Logout</string>
    <string name="addCity">Add City</string>

</resources>
